Production-ready AI Interview Coach

--- a/backend/backend/websocket/Dockerfile
+++ b/backend/backend/websocket/Dockerfile
@@ -1,25 +1,68 @@
-FROM python:3.9-slim
+# Multi-stage build for production optimization
+FROM python:3.11-slim as builder
 
-# Install system dependencies first
-RUN apt-get update && \
-    apt-get install -y --no-install-recommends \
-        gcc \
-        python3-dev \
-        portaudio19-dev \
+# Install build dependencies
+RUN apt-get update && apt-get install -y --no-install-recommends \
+    gcc \
+    python3-dev \
+    portaudio19-dev \
+    pkg-config \
     && rm -rf /var/lib/apt/lists/*
 
-# portaudio19-dev is required for pyaudio
+# Create virtual environment
+RUN python -m venv /opt/venv
+ENV PATH="/opt/venv/bin:$PATH"
 
+# Copy requirements and install Python dependencies
+COPY requirements.txt .
+RUN pip install --no-cache-dir --upgrade pip setuptools wheel && \
+    pip install --no-cache-dir -r requirements.txt
+
+# Production stage
+FROM python:3.11-slim as production
+
+# Install runtime dependencies only
+RUN apt-get update && apt-get install -y --no-install-recommends \
+    portaudio19-dev \
+    alsa-utils \
+    && rm -rf /var/lib/apt/lists/*
+
+# Create non-root user for security
+RUN groupadd -r appuser && useradd -r -g appuser appuser
+
+# Copy virtual environment from builder
+COPY --from=builder /opt/venv /opt/venv
+ENV PATH="/opt/venv/bin:$PATH"
+
+# Set working directory
 WORKDIR /app
 
-# Copy requirements first to leverage Docker cache
-COPY requirements.txt .
-RUN pip install --no-cache-dir -r requirements.txt
-
 # Copy application code
-COPY . .
+COPY --chown=appuser:appuser . .
 
-ENV PORT=8001
-EXPOSE $PORT
+# Environment variables
+ENV PYTHONPATH=/app \
+    PYTHONUNBUFFERED=1 \
+    PYTHONDONTWRITEBYTECODE=1 \
+    PIP_NO_CACHE_DIR=1 \
+    PIP_DISABLE_PIP_VERSION_CHECK=1 \
+    WS_PORT=8001 \
+    ENVIRONMENT=production
 
+# Security: Remove sensitive files
+RUN rm -f requirements.txt && \
+    find . -name "*.pyc" -delete && \
+    find . -name "__pycache__" -delete
+
+# Switch to non-root user (note: audio access might need additional setup)
+USER appuser
+
+# Health check (basic TCP check since WebSocket doesn't have HTTP endpoints)
+HEALTHCHECK --interval=30s --timeout=10s --start-period=60s --retries=3 \
+    CMD python -c "import socket; s=socket.socket(); s.settimeout(5); s.connect(('localhost', 8001)); s.close()"
+
+# Expose port
+EXPOSE $WS_PORT
+
+# Production command
 CMD ["python", "server.py"]
