--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,9 +1,32 @@
-websockets>=11.0.3
-numpy>=1.24.3
-pyaudio>=0.2.13
-faster-whisper>=0.9.0
-python-dotenv>=1.0.0
-fastapi>=0.95.2
-uvicorn>=0.22.0
-openai>=0.27.8
-pydantic>=1.10.7
+# Core FastAPI dependencies
+fastapi==0.104.1
+uvicorn[standard]==0.24.0
+pydantic==2.5.0
+pydantic-settings==2.1.0
+
+# OpenAI
+openai==1.3.7
+
+# WebSocket and audio processing
+websockets==12.0
+numpy==1.24.4
+pyaudio==0.2.14
+faster-whisper==0.10.0
+
+# Configuration and utilities
+python-dotenv==1.0.0
+
+# Production dependencies
+gunicorn==21.2.0
+requests==2.31.0
+
+# Security and monitoring (optional)
+python-multipart==0.0.6
+python-jose[cryptography]==3.3.0
+passlib[bcrypt]==1.7.4
+
+# Development dependencies (comment out for production)
+# pytest==7.4.3
+# pytest-asyncio==0.21.1
+# black==23.11.0
+# flake8==6.1.0
